--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <div class="vertical-center-row">
                 <div align="center">
                 
-                <img src="images/icon.jpg" height="10%" width="10%"alt="Logo">
+                <img src="images/icon.jpg" height="20%" width="20%"alt="Logo">
                 <h3>Select Language</h3>
     
-                <a type="button" href="mainMap.html" class="btn btn-lg btn-success" >English</a>
-                <a type="button" href="#/new-page.html" class="btn btn-lg btn-success" >Chinese</a>
-                <a type="button" href="#/new-page.html" class="btn btn-lg btn-success" >Malay</a>
-                <a type="button" href="#/new-page.html" class="btn btn-lg btn-success" >Indian</a>
+                <a type="button" href="mainMap.html" class="btn btn-lg btn-primary" >English</a>
+                <a type="button" href="#/new-page.html" class="btn btn-lg btn-primary" >中文</a>
+                <a type="button" href="#/new-page.html" class="btn btn-lg btn-primary" >Melayu</a>
+                <a type="button" href="#/new-page.html" class="btn btn-lg btn-primary" >Indian</a>
                 </div>
             </div>
         </div>        
