--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a type="button" href="mainMap.html" class="btn btn-lg btn-primary" >English</a>
                 <a type="button" href="#/new-page.html" class="btn btn-lg btn-primary" >中文</a>
                 <a type="button" href="#/new-page.html" class="btn btn-lg btn-primary" >Melayu</a>
-                <a type="button" href="#/new-page.html" class="btn btn-lg btn-primary" >Indian</a>
+                <a type="button" href="#/new-page.html" class="btn btn-lg btn-primary" >தமிழ்</a>
                 </div>
             </div>
         </div>        
