--- a/application_pictorialGuide.html
+++ b/application_pictorialGuide.html
@@ -56,6 +56,15 @@
           <img class="first-slide" src="images/red.jpg" alt="First slide">
 -->
           <div class="container">
+
+		<table class="table table-bordered" style="width:100%">
+            <tr>  
+                <td style="width:33%">Current Location</td>
+                <td style="width:33%">Board the train at Line 5 when it arrives</td>
+                <td style="width:33%">Alight at Bishan (NS17) 8 steops later</td>
+            </tr>
+		</table>
+
 <!--            
 			<div class="carousel-caption">
               <h1>Example headline.</h1>
@@ -69,6 +78,16 @@
         <div class="item">
           
           <div class="container">
+
+		<table class="table table-bordered" style="width:100%">
+            <tr>  
+                <td style="width:33%">Proceed from the North South Line to the Circle Line by following the signs
+                located in the station</td>
+                <td style="width:33%">Reach Bishan (CC15)</td>
+                <td style="width:33%">Board the train at Line 10 when it  arrives</td>
+            </tr>
+		</table>
+
 <!--            
 			<div class="carousel-caption">
               <h1>Another example headline.</h1>
@@ -82,6 +101,15 @@
         <div class="item">
 
           <div class="container">
+
+		<table class="table table-bordered" style="width:100%">
+            <tr>  
+                <td style="width:33%">Alight at Dakota (CC8) 7 stops later</td>
+                <td style="width:33%">X</td>
+                <td style="width:33%">X</td>
+            </tr>
+		</table>
+
 <!--            
 			<div class="carousel-caption">
               <h1>One more for good measure.</h1>
