--- a/application_main.html
+++ b/application_main.html
@@ -27,8 +27,11 @@
 				<td style="width:20%">{{currentLocation}}</td>
                 <td style="width:10%">Destination: </td>
                 <td style="width:20%">{{destination}}</td>
-                <td><button>Brief Instructions</button></td>
-                <td><button>Pictorial Guide</button></td>
+                <td>
+                	
+                	<button ng-hide="!currentLocation.length && !destination.length">Brief Instructions</button>
+                </td>
+                <td><button ng-hide="!currentLocation.length && !destination.length">Pictorial Guide</button></td>
                 <td>
                     <button ng-click="reset = !reset">Reset</button>
           			<div class="box on" ng-show="reset" ng-animate="'box'"></div>
