--- a/application_pictorialGuide.html
+++ b/application_pictorialGuide.html
@@ -62,9 +62,9 @@
                     <table class="table table-bordered" style="width:100%">
 
 						<tr>  
-                            <td style="width:33%"></td>
-                            <td style="width:33%"></td>
-                            <td style="width:33%"></td>
+                            <td style="width:33%"><img src="images/station_Signs/Marsiling.jpg" height="100%" width="100%" alt="Logo"></td>
+                            <td style="width:33%"><img src="images/station_Signs/Marina South Pier.jpg" height="100%" width="100%" alt="Logo"></td>
+                            <td style="width:33%"><img src="images/station_Signs/Bishan.jpg" height="100%" width="100%" alt="Logo"></td>
                         </tr>
                         
 						<tr>  
@@ -102,8 +102,8 @@
 
                     <tr>  
                         <td style="width:33%"><img src="images/station_Signs/Circle Line.jpg" height="100%" width="100%" alt="Logo"></td>
-                        <td style="width:33%"></td>
-                        <td style="width:33%"></td>
+                        <td style="width:33%"><img src="images/station_Signs/Bishan.jpg" height="100%" width="100%" alt="Logo"></td>
+                        <td style="width:33%"><img src="images/station_Signs/Dhoby Ghaut.jpg" height="100%" width="100%" alt="Logo"></td>
                     </tr>
 
                     <tr>  
@@ -142,7 +142,7 @@
                 <table class="table table-bordered" style="width:100%">
 
                     <tr>  
-                        <td style="width:33%"></td>
+                        <td style="width:33%"><img src="images/station_Signs/Dakota.jpg" height="100%" width="100%" alt="Logo"></td>
                         <td style="width:33%"></td>
                         <td style="width:33%"></td>
                     </tr>
