--- a/application_pictorialGuide.html
+++ b/application_pictorialGuide.html
@@ -169,6 +169,20 @@
       </a>
 
     </div><!-- /.carousel -->        
-
+	
+		<table style="width:100%">
+            <tr bgcolor="#00FF00">  
+                <td>
+                	G
+                </td>
+            </tr>
+            
+            <tr bgcolor="#00FF00">  
+                <td>
+                	G
+                </td>
+            </tr>
+		</table>
+    
     </body>
 </html>
