--- a/application_main.html
+++ b/application_main.html
@@ -142,7 +142,7 @@
             </tr>
             
 			<tr>
-            	<td></td>
+            	<td>{{necrodiver}}</td>
                 <td></td>
                 <td></td>
                 <td></td>
