--- a/application_pictorialGuide.html
+++ b/application_pictorialGuide.html
@@ -47,7 +47,10 @@
             
 	<!-- Carousel
 	================================================== -->
+<!--
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
+-->
+    <div id="myCarousel" class="carousel" data-ride="carousel" data-interval="false">
 		<!-- Indicators -->
 		<ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
