--- a/application_pictorialGuide_not_supported.html
+++ b/application_pictorialGuide_not_supported.html
@@ -46,6 +46,8 @@
 		<h3>Pictorial Guide</h3>
         
 		<h5>Route not supported</h5>
-    	<p>Current route that are supported are: Marsiling to Dakota</p>
+    	<p>Current route that are supported are: </p>
+        <p>Marsiling to Dakota</p>
+        <p>Boon Lay to One North</p>
     </body>
 </html>
