--- a/application_pictorialGuide.html
+++ b/application_pictorialGuide.html
@@ -43,7 +43,7 @@
             </tr>
 		</table>
 
-		<h3>Pictorial Guide</h3>
+		<h3>Pictorial Guide: Marsiling to Dakota</h3>
             
 	<!-- Carousel
 	================================================== -->
