--- a/application_pictorialGuide_Boon Lay.html
+++ b/application_pictorialGuide_Boon Lay.html
@@ -43,7 +43,7 @@
             </tr>
 		</table>
 
-		<h3>Pictorial Guide</h3>
+		<h3>Pictorial Guide: Boon Lay to One North</h3>
             
 	<!-- Carousel
 	================================================== -->
