--- a/application_pictorialGuide.html
+++ b/application_pictorialGuide.html
@@ -86,9 +86,9 @@
                         </tr>
                         
                         <tr>  
-                            <td>Current Location</td>
-                            <td>Board the train at Line 5 when it arrives</td>
-                            <td>Alight at Bishan (NS17) 8 steops later</td>
+                            <td><current>Current Location</current></td>
+                            <td>Board the train at <red>Line 5</red> when it arrives</td>
+                            <td>Alight at <red>Bishan (NS17)</red> 8 stops later</td>
                         </tr>
                     </table>
 
@@ -113,10 +113,10 @@
                     </tr>
 
                     <tr>  
-                        <td>Proceed from the North South Line to the Circle Line by following the signs
+                        <td>Proceed from the <red>North South Line</red> to the <orange>Circle Line</orange> by following the signs
                         located in the station</td>
-                        <td>Reach Bishan (CC15)</td>
-                        <td>Board the train at Line 10 when it  arrives</td>
+                        <td>Reach <orange>Bishan (CC15)</orange></td>
+                        <td>Board the train at <orange>Line 10</orange> when it arrives</td>
                     </tr>
                 </table>
 				
@@ -142,7 +142,7 @@
                     </tr>
 
                     <tr>  
-                        <td>Alight at Dakota (CC8) 7 stops later</td>
+                        <td>Alight at <orange>Dakota (CC8)</orange> 7 stops later</td>
                         <td>X</td>
                         <td>X</td>
                     </tr>
