--- a/application_pictorialGuide_Boon Lay.html
+++ b/application_pictorialGuide_Boon Lay.html
@@ -86,9 +86,9 @@
                         </tr>
                         
                         <tr>  
-                            <td>Current Location</td>
-                            <td>Board the train at Line 1 when it arrives</td>
-                            <td>Alight at Buona Vista (EW21) 6 stops later</td>
+                            <td><current>Current Location</current></td>
+                            <td>Board the train at <green>Line 1</green> when it arrives</td>
+                            <td>Alight at <green>Buona Vista (EW21)</green> 6 stops later</td>
                         </tr>
                     </table>
 
@@ -113,10 +113,10 @@
                     </tr>
 
                     <tr>  
-                        <td>Proceed from the East West Line to the Circle Line by 
+                        <td>Proceed from the <green>East West Line</green> to the <orange>Circle Line</orange> by 
                         following the signs located in the station</td>
-                        <td>Reach Buona Vista (CC22)</td>
-                        <td>Board the train at Line 9 when it arrives</td>
+                        <td>Reach <orange>Buona Vista</orange> (CC22)</td>
+                        <td>Board the train at <orange>Line 9</orange> when it arrives</td>
                     </tr>
                 </table>
 				
@@ -142,7 +142,7 @@
                     </tr>
 
                     <tr>  
-                        <td>Alight at One-North (CC23) 1 stop later</td>
+                        <td>Alight at <orange>One-North (CC23)</orange> 1 stop later</td>
                         <td>X</td>
                         <td>X</td>
                     </tr>
