--- a/application_pictorialGuide_Boon Lay.html
+++ b/application_pictorialGuide_Boon Lay.html
@@ -115,7 +115,7 @@
                     <tr>  
                         <td>Proceed from the <green>East West Line</green> to the <orange>Circle Line</orange> by 
                         following the signs located in the station</td>
-                        <td>Reach <orange>Buona Vista</orange> (CC22)</td>
+                        <td>Reach <orange>Buona Vista (CC22)</orange></td>
                         <td>Board the train at <orange>Line 9</orange> when it arrives</td>
                     </tr>
                 </table>
@@ -167,13 +167,13 @@
 		<table style="width:100%">
             <tr bgcolor="#00FF00">  
                 <td>
-                	G
+                	S
                 </td>
             </tr>
             
             <tr bgcolor="#00FF00">  
                 <td>
-                	G
+                	S
                 </td>
             </tr>
 		</table>
