--- a/application_main.html
+++ b/application_main.html
@@ -96,7 +96,7 @@
                   <div class="box on" ng-show="bayfront" ng-animate="'box'"></div>                  
               </td>
               <td></td>
-              <td rowspan="4"><img src="images/Full Map.jpg" width="60%" alt="Logo"></td>
+              <td rowspan="4"><a ng-mouseover="showPopover()" ng-mouseleave="hidePopover()" class=" thumbnail"><img src="images/Full Map.jpg"><img src="images/Full Map.jpg" style="margin-left: 15%;" class="popover" ng-show="popoverIsVisible" alt=" logo"></a></td>
             </tr>
             
             <tr>	<!-----	Third Row	----->
