--- a/application_main.html
+++ b/application_main.html
@@ -141,10 +141,10 @@
             </tr>
          
             <tr>
-            	<td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+            	<td><input type="text" ng-model="rootCurrent"></td>
+                <td><input type="text" ng-model="rootDestination"></td>
+                <td>{{currentLocation}}</td>
+                <td>{{destination}}</td>
                 <td></td>
                 <td>
 <!--                    
