--- a/application_main.html
+++ b/application_main.html
@@ -27,8 +27,14 @@
                 <td style="width:10%"><a class="navbar-brand" href="application_main.html">T-Planner</a></td>
                 <td style="width:10%">Current Location: </td>
 				<td style="width:18%">{{currentLocation}}</td>
+				<td style="width:18%"><a class="btn btn-primary" ng-click="resetCurrent = !resetCurrent";">
+			    <i class="glyphicon glyphicon-remove"></i>
+		        </a></td>                
                 <td style="width:10%">Destination: </td>
                 <td style="width:18%">{{destination}}</td>
+				<td style="width:18%"><a class="btn btn-primary" ng-click="resetDestination = !resetDestination";">
+			    <i class="glyphicon glyphicon-remove"></i>
+		        </a></td>                 
                 <td style="width:12%">
                 	<a type="button" ng-hide="!destination.length" href="application_briefInstruction.html" 
                     class="btn btn-lg btn-info">Brief Instructions</a>
