--- a/application_main.html
+++ b/application_main.html
@@ -68,8 +68,28 @@
 -->                
                 </td>                 
                 <td style="width:12%">
-                	<a type="button" ng-hide="!destination.length" href="application_briefInstruction.html" 
+<!--                	
+                    <a type="button" ng-hide="!destination.length" href="application_briefInstruction.html" 
                     class="btn btn-lg btn-info">Brief Instructions</a>
+-->                    
+                    <!-----	Route for Marsiling to Dakota	----->
+                    <span ng-show=" destination=='Dakota' &&  currentLocation=='Marsiling' ">
+                           <a type="button" ng-hide="!destination.length" href="application_briefInstruction.html" 
+                           class="btn btn-lg btn-info">Brief Instructions</a>
+                    </span>
+                    <!-----	Route for Boon Lay to One North	----->
+                    <span ng-show=" destination=='One North' &&  currentLocation=='Boon Lay' ">
+                           <a type="button" ng-hide="!destination.length" href="application_briefInstruction_Boon Lay.html" 
+                           class="btn btn-lg btn-info">Brief Instructions</a>
+                    </span>
+                    <!-----	Route for not supported ones	----->                 
+                	<span ng-show=" !(destination=='Dakota' && currentLocation=='Marsiling') && 
+                    !(destination=='One North' && currentLocation=='Boon Lay')">
+                           <a type="button" ng-hide="!destination.length" href="application_briefInstruction_not_supported.html" 
+                           class="btn btn-lg btn-info">Brief Instructions</a>
+                    </span>                	
+
+                    
                 </td>  
                              	
                 <td style="width:12%">        	
