Fix the Big Image problem again

--- a/application_main.html
+++ b/application_main.html
@@ -162,7 +162,7 @@
                   <div class="box on" ng-show="bayfront" ng-animate="'box'"></div>                  
               </td>
               <td></td>
-              <td rowspan="10"><a class="thumbnail"><img src="images/Full Map.jpg" ng-click="enlarge()" alt="logo"></a>
+              <td rowspan="10"><a class="thumbnail"><img src="images/Full Map.jpg" ng-click="enlarge()" alt="logo" width="100%"></a>
                   </td>
             </tr>
             
