--- a/application_pictorialGuide_Boon Lay.html
+++ b/application_pictorialGuide_Boon Lay.html
@@ -35,7 +35,7 @@
                 </td>
                 <td style="width:18%">One North</td>
                 <td style="width:12%">
-                	<a type="button" href="application_briefInstruction.html" 
+                	<a type="button" href="application_briefInstruction_Boon Lay.html" 
                     class="btn btn-lg btn-info">Brief Instructions</a>
                 </td>  
                              	
