Added Numbering to the pictoral guide

--- a/application_pictorialGuide_Boon Lay.html
+++ b/application_pictorialGuide_Boon Lay.html
@@ -72,14 +72,20 @@
 
                     <table class="table table-bordered" style="width:100%">
 
+                        <tr>  
+                            <td style="width:33%"><b>1.</b></td>
+                            <td style="width:33%"><b>2.</b></td>
+                            <td style="width:33%"><b>3.</b></td>
+                        </tr>
+
 						<tr>  
-                            <td style="width:33%">
+                            <td >
                             	<img src="images/station_Signs/Boon Lay.jpg" height="100%" width="100%" alt="Logo">
                             </td>
-                            <td style="width:33%">
+                            <td >
                             	<img src="images/station_Signs/Pasir Ris.jpg" height="100%" width="100%" alt="Logo">
                             </td>
-                            <td style="width:33%">
+                            <td >
                             	<img src="images/station_Signs/Buona Vista.jpg" height="100%" width="100%" alt="Logo">
                             </td>
                         </tr>
@@ -104,9 +110,15 @@
                 <table class="table table-bordered" style="width:100%">
 
                     <tr>  
-                        <td style="width:33%"><img src="images/station_Signs/Circle Line.jpg" height="100%" width="100%" alt="Logo"></td>
-                        <td style="width:33%"><img src="images/station_Signs/Buona Vista.jpg" height="100%" width="100%" alt="Logo"></td>
-                        <td style="width:33%"><img src="images/station_Signs/Harbour Front.jpg" height="100%" width="100%" alt="Logo"></td>
+                        <td style="width:33%"><b>4.</b></td>
+                        <td style="width:33%"><b>5.</b></td>
+                        <td style="width:33%"><b>6.</b></td>
+                    </tr>
+
+                    <tr>  
+                        <td ><img src="images/station_Signs/Circle Line.jpg" height="100%" width="100%" alt="Logo"></td>
+                        <td ><img src="images/station_Signs/Buona Vista.jpg" height="100%" width="100%" alt="Logo"></td>
+                        <td ><img src="images/station_Signs/Harbour Front.jpg" height="100%" width="100%" alt="Logo"></td>
                     </tr>
 
                     <tr>  
@@ -131,9 +143,15 @@
                 <table class="table table-bordered" style="width:100%">
 
                     <tr>  
-                        <td style="width:33%"><img src="images/station_Signs/One North.jpg" height="100%" width="100%" alt="Logo"></td>
-                        <td style="width:33%"></td>
-                        <td style="width:33%"></td>
+                        <td style="width:33%"><b>7.</b></td>
+                        <td style="width:33%"><b>8.</b></td>
+                        <td style="width:33%"><b>9.</b></td>
+                    </tr>
+
+                    <tr>  
+                        <td ><img src="images/station_Signs/One North.jpg" height="100%" width="100%" alt="Logo"></td>
+                        <td ></td>
+                        <td ></td>
                     </tr>
                     
                     <tr>  
