--- a/application_main.html
+++ b/application_main.html
@@ -19,8 +19,8 @@
     <body ng-app="my-app" ng-controller="AppController">
         
 
-   	<h1>Hello. {{data.tes}} Pew: {{destination}}</h1>
-    <h1>Hello2. {{currentLocation}} Pew: {{destination}}</h1>
+   	<h1>Hello. {{data.tes}} Pew: {{doSomething}}</h1>
+    <h1>Current Location: {{currentLocation}} Destination: {{destination}}</h1>
 <!--        <div ng-repeat='image in images'>
             <img ng-src="{{image}}" style="z-index: 100; position: absolute; width: 50%; margin-left:16%; " />
         </div>
